--- a/testing-examples/spawn-draggable.html
+++ b/testing-examples/spawn-draggable.html
@@ -11,9 +11,18 @@
 					$(this).remove();
 				});
 			});
+			$(document).on("click", ".object .header .delete", function(e){
+			
+					$(this).parent().parent().remove();
+
+			
+			});
 			function objectTemplateWithID(id){
 				return '<div class="object" id="object'+ id +'"> \
-							<div class="header"><span class="objectTitle">Object ' + id + '</span></div>	\
+							<div class="header">	\
+								<span class="objectTitle">Object ' + id + '</span> \
+								<span class="delete">X</span> \
+							</div>	\
 								\
 								\
 						</div>';
@@ -94,13 +103,24 @@
 			background:blue;
 			height:25px;
 			width:100%;	
+		
 		}
 		
 		
 		.object .objectTitle{
 			position: absolute;
 			top: 15%;	
-			left:5%;
+			left:30%;
+				-webkit-touch-callout: none;
+			-webkit-user-select: none;
+			-khtml-user-select: none;
+			-moz-user-select: none;
+			-ms-user-select: none;
+			user-select: none;
+		}
+		
+		.header .delete{
+			float: right;
 		}
 		
 		.object:hover {
