Ability to revert to default

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 									<td><div class="color" style="background-color: #5959AB"></div></td>\
 									<td><div class="color" style="background-color: #006400"></div></td>\
 									<td><div class="color" style="background-color: #800080"></div></td>\
-									<td><div class="color" style="background-color: #EE3B3B"></div></td>\
+									<td><div class="color" style="background-color: #666"></div></td>\
 								</tr>\
 							</table>\
 						</div>\
