--- a/index.html
+++ b/index.html
@@ -155,9 +155,13 @@
 
 	<style>
 		body,html{
-  			height:100%;
+  			height:98%;
 		}
 		
+		div{
+			display: inline-block;
+			vertical-align: top;
+		}
 		
 		#toolbox{
 		 
@@ -173,6 +177,14 @@
 			height:100%;
 			width:70%;
 			display: inline-block;
+			border: 2px solid grey;
+ 			background-color:#fff;
+			background-image: linear-gradient(grey 2px, transparent 2px),
+			linear-gradient(90deg, grey 2px, transparent 2px),
+			linear-gradient(rgba(0,0,0,.3) 1px, transparent 1px),
+			linear-gradient(90deg, rgba(0,0,0,.3) 1px, transparent 1px);
+			background-size:100px 100px, 100px 100px, 20px 20px, 20px 20px;
+			background-position:-2px -2px, -2px -2px, -1px -1px, -1px -1px
 		}
 		#canvas div {
 			display: inline-block;	
@@ -281,6 +293,7 @@
 		
 	</style>
 </head>
+
 <body>
 	
 	<div id="canvas"></div>
