limit text field for rename

--- a/index.html
+++ b/index.html
@@ -173,7 +173,7 @@
 		#toolbox{
 		 
 			height:100%;
-			width:29%;
+			width:28%;
 			vertical-align: top;
 			border: 1px solid black;
 		    
@@ -314,7 +314,7 @@
 	
 		<fieldset>
 			<legend>Properties:</legend>
-			Rename: <input id="rename_text" type="text" name="change_name"><span id="rename_button">Change</span>
+			Rename: <input id="rename_text" type="text" name="change_name" maxlength="10"><span id="rename_button">Change</span>
 		</fieldset>
 
 		   <fieldset>
