Work in progress
Fixed the backspace on the attributes so that it goes to the previous.
Still a couple bugs but overall functional

--- a/index.html
+++ b/index.html
@@ -196,6 +196,7 @@
 				}
 			}).on("keydown", ".object .content input:focus", function(e) {
 				if(e.which == 8 && $(this).val().length == 0) {
+					e.preventDefault();
 					var cells = $(".object.selectedObject .content tbody tr td:not(:has(input))");
 					editAttribute($(cells[cells.length - 1]));
 				}
