Fixed the row remove for attributes
Fixed from removing the cell to removing the row like it should

--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
 				input.parent().html(input.val());
 			}
 			function removeAttribute(input) {
-				input.parent().remove();
+				input.parent().parent().remove();
 			}
 			//hold value for zindex bring to front
 			front = 0;
