--- a/index.html
+++ b/index.html
@@ -316,10 +316,14 @@
  			background-color:#fff;
 			background-image: linear-gradient(rgba(0,0,0,.3) 2px, transparent 2px),
 			linear-gradient(90deg, rgba(0,0,0,.3) 2px, transparent 2px),
-			linear-gradient(rgba(0,0,0,.3) 1px, transparent 1px),
+ 			linear-gradient(rgba(0,0,0,.3) 1px, transparent 1px),
 			linear-gradient(90deg, rgba(0,0,0,.3) 1px, transparent 1px);
+ 			background-image: -webkit-linear-gradient(rgba(0,0,0,.3) 2px, transparent 2px),
+   			-webkit-linear-gradient(left, rgba(0,0,0,.3) 2px, transparent 2px),
+ 			-webkit-linear-gradient(rgba(0,0,0,.3) 1px, transparent 1px),
+			-webkit-linear-gradient(left, rgba(0,0,0,.3) 1px, transparent 1px);
 			background-size:100px 100px, 100px 100px, 20px 20px, 20px 20px;
-			background-position:-2px -2px, -2px -2px, -1px -1px, -1px -1px
+			background-position:-2px -2px, -2px -2px, -1px -1px, -1px -1px;
 		}
 		#canvas div {
 			display: inline-block;	
