--- a/index.html
+++ b/index.html
@@ -272,12 +272,10 @@
 					// relationSource.offset().top , relationSource.offset().left
 					// to
 					// $(this).offset().top , $(this).offset().left
-					console.log(relationSource.offset().top+ "," +  relationSource.offset().left+ "," +  $(this).offset().top+ "," +  $(this).offset().left);
-					paper.arrow(relationSource.offset().top, relationSource.offset().left, $(this).offset().top, $(this).offset().left, 8);
+					paper.arrow(relationSource.offset().left,relationSource.offset().top, $(this).offset().left, $(this).offset().top, 8);
 					allRelationships.push({source: relationSource, target: $(this)});
 					isSelecting = false;
 					delete relationSource;
-					console.log(allRelationships);
 				} else {
 					isSelecting = true;
 					relationSource = $(this);
