--- a/index.html
+++ b/index.html
@@ -272,8 +272,8 @@
 					// relationSource.offset().top , relationSource.offset().left
 					// to
 					// $(this).offset().top , $(this).offset().left
-					paper.arrow(relationSource.offset().left-1,relationSource.offset().top+5, $(this).offset().left+2, $(this).offset().top+8, 8);
-					allRelationships.push({source: relationSource, target: $(this)});
+					var relationArrow = paper.arrow(relationSource.offset().left-1,relationSource.offset().top+5, $(this).offset().left+2, $(this).offset().top+8, 8);
+					allRelationships.push({source: relationSource, target: $(this), arrow: relationArrow});
 					isSelecting = false;
 					delete relationSource;
 				} else {
